@@ -1,18 +1,16 @@
 // jQuery Context Menu Plugin
 //
-// Version 1.00
+// Version 1.01
 //
 // Cory S.N. LaViska
 // A Beautiful Site (http://abeautifulsite.net/)
 //
-// Visit http://abeautifulsite.net/notebook/80 for usage and more information
+// More info: http://abeautifulsite.net/2008/09/jquery-context-menu-plugin/
 //
 // Terms of Use
 //
-// This software is licensed under a Creative Commons License and is copyrighted
-// (C)2008 by Cory S.N. LaViska.
-//
-// For details, visit http://creativecommons.org/licenses/by/3.0/us/
+// This plugin is dual-licensed under the GNU General Public License
+//   and the MIT License and is copyright A Beautiful Site, LLC.
 //
 // Modified by Phil Weir:
 //   Added highlighting of selected row and submenu support
@@ -35,11 +33,6 @@ if(jQuery)( function() {
 				var offset = $(el).offset();
 				// Add contextMenu class
 				$('#' + o.menu).addClass('contextMenu');
-
-				// Cancel context menu event
-				$(this).bind("contextmenu",function(e){
-					return false;
-				});
 
 				// Simulate a true right click
 				$(this).mousedown( function(e) {
@@ -83,8 +76,8 @@ if(jQuery)( function() {
 								d.innerHeight = document.body.clientHeight;
 								d.innerWidth = document.body.clientWidth;
 							}
-							(e.pageX) ? x = e.pageX + 1 : x = e.clientX + d.scrollLeft + 1;
-							(e.pageY) ? y = e.pageY + 1 : x = e.clientY + d.scrollTop + 1;
+							(e.pageX) ? x = e.pageX : x = e.clientX + d.scrollLeft;
+							(e.pageY) ? y = e.pageY : y = e.clientY + d.scrollTop;
 
 							// Show the menu
 							$(document).unbind('click');
@@ -212,7 +205,7 @@ if(jQuery)( function() {
 					$('#' + o.menu).each(function() { $(this).bind('mousedown.disableTextSelect', function() { return false; }); });
 				}
 				// Disable browser context menu (requires both selectors to work in IE/Safari + FF/Chrome)
-				$(el).add('UL.contextMenu').bind('contextmenu', function() { return false; });
+				$(el).add($('UL.contextMenu')).bind('contextmenu', function() { return false; });
 
 			});
 			return $(this);
